// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Helpers/Flex Flex Align Content (Flex Container) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4
      style="text-align: center"
    >
      flex-start
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-content-flex-start"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      flex-end
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-content-flex-end"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      center
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-content-center"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      space-between
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-content-space-between"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      space-around
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-content-space-around"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      space-evenly
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-content-space-evenly"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      stretch
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-content-stretch"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      baseline
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-content-baseline"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

  </div>
  


</div>
`;

exports[`Storyshots Helpers/Flex Flex Align Items (Flex Container) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4
      style="text-align: center"
    >
      flex-start | start | self-start
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-items-flex-start"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      flex-end | end | self-end
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-items-flex-end"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      center
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-items-center"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      stretch
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-items-stretch"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      baseline
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-items-baseline"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

  </div>
  


</div>
`;

exports[`Storyshots Helpers/Flex Flex Align Self (Flex Items) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4>
      flex-end
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-items-flex-start"
      style="max-width:30rem;"
    >
      
        
      <div>
        1
      </div>
      
        
      <div>
        2
      </div>
      
        
      <div
        class="sap-flex-align-self-flex-end"
      >
        3
      </div>
      
        
      <div>
        4
      </div>
      
    
    </section>
    

  </div>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4>
      stretch
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-items-flex-start"
      style="max-width:30rem;"
    >
      
        
      <div>
        1
      </div>
      
        
      <div>
        2
      </div>
      
        
      <div
        class="sap-flex-align-self-stretch"
      >
        3
      </div>
      
        
      <div>
        4
      </div>
      
    
    </section>
    

  </div>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4>
      center
    </h4>
    
    
    <section
      class="sap-flex sap-flex--align-items-flex-start"
      style="max-width:30rem;"
    >
      
        
      <div>
        1
      </div>
      
        
      <div>
        2
      </div>
      
        
      <div
        class="sap-flex-align-self-center"
      >
        3
      </div>
      
        
      <div>
        4
      </div>
      
    
    </section>
    

  </div>
  



</div>
`;

exports[`Storyshots Helpers/Flex Flex Center (Flex Container) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4>
      row center
    </h4>
    
    
    <section
      class="sap-flex sap-flex--center"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <h4>
      column center
    </h4>
    
    
    <section
      class="sap-flex  sap-flex--center-column"
      style="max-width:30rem; min-height: 20rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

  </div>
  


</div>
`;

exports[`Storyshots Helpers/Flex Flex Container 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <section
      class="sap-flex"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

  </div>
  


</div>
`;

exports[`Storyshots Helpers/Flex Flex Direction (Flex Container) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4>
      Row
    </h4>
    
    
    <section
      class="sap-flex sap-flex--row"
    >
      
        
      <div>
        1
      </div>
      
        
      <div>
        2
      </div>
      
        
      <div>
        3
      </div>
      
    
    </section>
    

  </div>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4>
      Row Reverse
    </h4>
    
    
    <section
      class="sap-flex sap-flex--row-reverse"
    >
      
        
      <div>
        1
      </div>
      
        
      <div>
        2
      </div>
      
        
      <div>
        3
      </div>
      
    
    </section>
    

  </div>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4>
      Column
    </h4>
    
    
    <section
      class="sap-flex sap-flex--column"
    >
      
        
      <div>
        1
      </div>
      
        
      <div>
        2
      </div>
      
        
      <div>
        3
      </div>
      
    
    </section>
    

  </div>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4>
      Column Reverse
    </h4>
    
    
    <section
      class="sap-flex sap-flex--column-reverse"
    >
      
        
      <div>
        1
      </div>
      
        
      <div>
        2
      </div>
      
        
      <div>
        3
      </div>
      
    
    </section>
    

  </div>
  

</div>
`;

exports[`Storyshots Helpers/Flex Flex Gap (Flex Container) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4
      style="text-align: center"
    >
      tiny
    </h4>
    
    
    <section
      class="sap-flex sap-flex--gap-tiny"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      small
    </h4>
    
    
    <section
      class="sap-flex sap-flex--gap-small"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      medium
    </h4>
    
    
    <section
      class="sap-flex sap-flex--gap-medium"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      large
    </h4>
    
    
    <section
      class="sap-flex sap-flex--gap-large"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      column small
    </h4>
    
    
    <section
      class="sap-flex sap-flex--column-gap-small"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

  </div>
  


</div>
`;

exports[`Storyshots Helpers/Flex Flex Grow (Flex Items) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <section
      class="sap-flex"
      style="max-width:30rem;"
    >
      
        
      <div>
        1
      </div>
      
        
      <div
        class="sap-flex-grow-4"
      >
        2
      </div>
      
        
      <div
        class="sap-flex-grow-1"
      >
        3
      </div>
      
        
      <div>
        4
      </div>
      
    
    </section>
    

  </div>
  


</div>
`;

exports[`Storyshots Helpers/Flex Flex Justify Content (Flex Container) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4
      style="text-align: center"
    >
      flex-start | start
    </h4>
    
    
    <section
      class="sap-flex sap-flex--justify-flex-start"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      flex-end | end
    </h4>
    
    
    <section
      class="sap-flex sap-flex--justify-flex-end"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      left
    </h4>
    
    
    <section
      class="sap-flex sap-flex--justify-left"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      right
    </h4>
    
    
    <section
      class="sap-flex sap-flex--justify-right"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      center
    </h4>
    
    
    <section
      class="sap-flex sap-flex--justify-center"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      space-between
    </h4>
    
    
    <section
      class="sap-flex sap-flex--justify-space-between"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      space-around
    </h4>
    
    
    <section
      class="sap-flex sap-flex--justify-space-around"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <br />
    <br />
    
    
    <h4
      style="text-align: center"
    >
      space-evenly
    </h4>
    
    
    <section
      class="sap-flex sap-flex--justify-space-evenly"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

  </div>
  

</div>
`;

exports[`Storyshots Helpers/Flex Flex Order (Flex Items) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <section
      class="sap-flex"
      style="max-width:30rem;"
    >
      
        
      <div
        class="sap-flex-order-3"
      >
        1
      </div>
      
        
      <div>
        2
      </div>
      
        
      <div>
        3
      </div>
      
        
      <div>
        4
      </div>
      
    
    </section>
    

  </div>
  


</div>
`;

exports[`Storyshots Helpers/Flex Flex Shrink (Flex Items) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <section
      class="sap-flex"
      style="max-width:30rem;"
    >
      
        
      <div>
        1
      </div>
      
        
      <div
        class="sap-flex-shrink-2"
      >
        2
      </div>
      
        
      <div>
        3
      </div>
      
        
      <div>
        4
      </div>
      
        
      <div>
        5
      </div>
      
        
      <div>
        6
      </div>
      
        
      <div>
        7
      </div>
      
        
      <div>
        8
      </div>
      
        
      <div>
        9
      </div>
      
        
      <div>
        10
      </div>
      
    
    </section>
    

  </div>
  


</div>
`;

exports[`Storyshots Helpers/Flex Flex Wrap (Flex Container) 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .sap-docs-container section{
        background: #E2EEFF;
        min-height: 8rem;
        padding: 1rem;
    }

    .sap-docs-container div {
        background: #69ADF8;
        width: 4rem;
        min-height: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 0.5rem;
        color: #fff;
        margin: 0.1rem;
    }

  </style>
  


  <div
    class="sap-docs-container"
  >
    
    
    <h4>
      nowrap
    </h4>
    
    
    <section
      class="sap-flex sap-flex--nowrap"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <h4>
      wrap
    </h4>
    
    
    <section
      class="sap-flex sap-flex--wrap"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

    
    <h4>
      wrap-reverse
    </h4>
    
    
    <section
      class="sap-flex sap-flex--wrap-reverse"
      style="max-width:30rem;"
    >
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
        
      <div />
      
    
    </section>
    

  </div>
  


</div>
`;
